# Cartographer

./: .env.example  .gitignore  .pre-commit-config.yaml  AI-Engineering-Capstone-Ideas.md  Cartographer-PROJECT-CONTEXT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: base_agent.py  state.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  auth.py  blast_radius.py  chat.py  graph.py  health.py  repositories.py  sandbox.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py  telemetry.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  agent_run.py  chat_session.py  chunk.py  embedding.py  graph_edge.py  graph_node.py  repository.py  sandbox_job.py  user.py
backend/app/db/repositories/: agent_repo.py  base.py  chunk_repo.py  graph_repo.py  repository_repo.py  user_repo.py
backend/app/prompts/: blast_radius.yaml  code_edit.yaml  critic.yaml  memory.yaml  planner.yaml  reasoning.yaml  reflection.yaml  retriever.yaml  supervisor.yaml
backend/app/services/agents/: base.py  orchestrator.py  state.py
backend/app/services/agents/nodes/: blast_radius.py  code_edit.py  critic.py  memory.py  planner.py  reasoning.py  reflection.py  retriever.py  supervisor.py  test_runner.py
backend/app/services/auth/: auth_service.py
backend/app/services/cache/: __init__.py  redis_service.py
backend/app/services/embedding/: __init__.py  base.py  factory.py
backend/app/services/embedding/providers/: __init__.py  bge_provider.py  nomic_provider.py  openai_provider.py
backend/app/services/graph/: __init__.py  ast_parser.py  graph_builder.py
backend/app/services/ingestion/: chunk_service.py  clone_service.py  embedding_service.py  file_scanner.py  ingestion_orchestrator.py  ingestion_worker.py
backend/app/services/llm/: base.py  factory.py
backend/app/services/llm/providers/: anthropic_provider.py  ollama_provider.py  openai_provider.py
backend/app/services/retrieval/: __init__.py  context_compressor.py  graph_retriever.py  hybrid_retriever.py  keyword_retriever.py  parent_child_retriever.py  reranker.py  vector_retriever.py
backend/app/services/sandbox/: docker_sandbox.py
backend/benchmarks/: run_benchmarks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/tests/: conftest.py
backend/tests/unit/agents/: test_orchestrator.py  test_planner.py  test_retriever.py
backend/tests/unit/api/: test_api.py
backend/tests/unit/services/: test_ast_parser.py  test_hybrid_retriever.py  test_sandbox.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/__tests__/components/: Chat.test.tsx  Repositories.test.tsx
frontend/src/__tests__/store/: authStore.test.ts  chatStore.test.ts
frontend/src/api/: client.ts  repositories.ts
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  EmptyState.tsx  Input.tsx  Table.tsx
frontend/src/pages/: AgentTrace.tsx  Auth.tsx  BlastRadius.tsx  Chat.tsx  Dashboard.tsx  DiffViewer.tsx  RefactorRuns.tsx  Repositories.tsx  RepositoryExplorer.tsx  RepositoryGraph.tsx  Settings.tsx  TestResults.tsx
frontend/src/store/: authStore.ts  chatStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: cn.ts
infra/docker/nginx/: nginx.dev.conf
infra/docker/sandbox/: Dockerfile.sandbox
infra/monitoring/: prometheus.yml
infra/postgres/: init.sql
