[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartographer-backend"
version = "0.1.0"
description = "Cartographer — Autonomous Code Understanding Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Cartographer Team" }]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",       # Alembic sync driver
    "pgvector>=0.3.6",

    # Cache
    "redis[hiredis]>=5.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # LLM / AI
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.50",
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    "tiktoken>=0.8.0",

    # Embeddings
    "sentence-transformers>=3.3.0",  # BGE + Nomic local models

    # Parsing / AST
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "gitpython>=3.1.44",

    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "anyio>=4.7.0",
    "aiofiles>=24.1.0",
    "PyYAML>=6.0.2",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",                 # For async TestClient
    "faker>=33.0.0",
    "factory-boy>=3.3.1",

    # Linting / Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # Type stubs
    "types-PyYAML>=6.0.12",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "sqlalchemy[mypy]>=2.0.36",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
]
ignore = [
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
    "ANN401", # Dynamically typed expressions (Any)
    "ARG001", # Unused function argument (common in FastAPI dependencies)
    "ARG002", # Unused method argument
    "ANN201", # Missing return type for public function
    "ANN202", # Missing return type for private function
    "ANN204", # Missing return type for special method
    "B008",   # Do not perform function call in argument defaults (FastAPI Depends/Query)
    "E501",   # Line too long
    "B027",   # Empty method in abstract base class without abstract decorator
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
